--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/postcss": "^4.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.11.3",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
