--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2"
   },
