--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@tailwindcss/postcss": "^4.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.11.3",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.16.0",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
     "react-icons": "^5.5.0",
-    "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1",
+    "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2"
   },
@@ -30,7 +30,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
