--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-slot": "^1.2.2",
@@ -20,8 +21,10 @@
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
+    "react-hook-form": "^7.58.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2"
   },
